--- a/src/app/widgets/grid/grid.component.html
+++ b/src/app/widgets/grid/grid.component.html
@@ -1,19 +1,25 @@
 <div>
   <table mat-table [dataSource]="bindingDataSource" class="mat-elevation-z1">
-    <ng-container *ngFor="let column of columns" [matColumnDef]="column.field">
+    <ng-container *ngFor="let column of columns; let i = index" [matColumnDef]="column.field">
       <th mat-header-cell *matHeaderCellDef [style.width]="column.width || 'auto'"> {{column.caption}} </th>
-      <td mat-cell *matCellDef="let row">        
+      <td mat-cell *matCellDef="let row">
         <ng-template [ngIf]="isNumber(row, column)" [ngIfElse]="elseBlock">
           {{column.format(getCellData(row, column)) | number}}
-        </ng-template>        
+        </ng-template>
         <ng-template #elseBlock>
           {{column.format(getCellData(row, column))}}
         </ng-template>
       </td>
+      <ng-container *ngIf="showFooter">
+        <td mat-footer-cell *matFooterCellDef>{{getFooterValue(column.footer)}}</td>
+      </ng-container>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index" (click)="onRowClick(row, i)" [class.highlighted]="selectedIndex == i"></tr>
+    <ng-container *ngIf="showFooter">
+      <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+    </ng-container>
   </table>
 </div>
 
