--- a/src/app/widgets/flyout/flyout.component.scss
+++ b/src/app/widgets/flyout/flyout.component.scss
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: flex-end;
 
-    .mat-button, .mat-raised-button {
+    .mat-button, .mat-flat-button {
       margin-left: 8px;
     }
   }
