--- a/src/app/widgets/product-lookup/product-lookup.component.html
+++ b/src/app/widgets/product-lookup/product-lookup.component.html
@@ -8,6 +8,7 @@
            [floatLabel]="'never'"
            [direction]="direction"
            (onKeydown)="handleKeydown($event)"
+           (onSelect)="handleSelect($event)"
            [showOnKeyDown]="false"
            [preventKeys]="['+', '-']"
            (show)="onShow()"
