--- a/src/app/product/components/product-search/product-search.component.html
+++ b/src/app/product/components/product-search/product-search.component.html
@@ -25,7 +25,7 @@
       </dropdown>
     </div>
   </div>
-  <div class="action">
+  <div class="actions">
     <button mat-flat-button (click)="doCancel()">Hủy (Esc)</button>
     <button mat-flat-button color="primary" (click)="doSearch()">Tìm (F4)</button>
   </div>
