--- a/src/app/product/components/product/product.component.html
+++ b/src/app/product/components/product/product.component.html
@@ -70,7 +70,7 @@
       </div>
     </div>
   </div>
-  <div class="action">
+  <div class="actions">
     <button mat-flat-button (click)="cancel()">Hủy (Esc)</button>
     <button mat-flat-button color="primary" (click)="save()">Lưu (F4)</button>
   </div>
