--- a/src/app/retail/components/qty-editor/qty-editor.component.html
+++ b/src/app/retail/components/qty-editor/qty-editor.component.html
@@ -16,7 +16,7 @@
       </mat-form-field>
     </div>
   </div>
-  <div class="action">
+  <div class="actions">
     <button mat-flat-button (click)="doCancel()">Hủy (Esc)</button>
     <button mat-flat-button color="primary" (click)="save()">Lưu (F4)</button>
   </div>
