--- a/src/app/widgets/flyout/flyout.component.scss
+++ b/src/app/widgets/flyout/flyout.component.scss
@@ -7,11 +7,12 @@
   }
 
   .actions {
-    display: flex;
-    justify-content: flex-end;
+    position: absolute;
+    bottom: 8px;
+    right: 0px;
 
-    .mat-button, .mat-flat-button {
-      margin-left: 8px;
+    button {
+      margin-right: 8px;
     }
-  }
+  }  
 }
