--- a/src/app/retail/components/payment/payment.component.html
+++ b/src/app/retail/components/payment/payment.component.html
@@ -37,7 +37,7 @@
       </mat-form-field>
     </div>
   </div>  
-  <div class="action">
+  <div class="actions">
     <button mat-flat-button (click)="doCancel()">Hủy (Esc)</button>
     <button mat-flat-button color="primary" (click)="doComplete()">Hoàn tất (F4)</button>
   </div>
