--- a/src/app/product/components/product/product.component.html
+++ b/src/app/product/components/product/product.component.html
@@ -71,7 +71,7 @@
     </div>
   </div>
   <div class="actions">
-    <button mat-flat-button (click)="cancel()">Hủy (Esc)</button>
+    <button mat-flat-button (click)="doCancel()">Hủy (Esc)</button>
     <button mat-flat-button color="primary" (click)="save()">Lưu (F4)</button>
   </div>
 </div>
