--- a/src/app/retail/components/retail/retail.component.html
+++ b/src/app/retail/components/retail/retail.component.html
@@ -1,5 +1,6 @@
 <div class="retail">
   <toolbar>
+    <toolbar-title>Bán lẻ</toolbar-title>
     <actions>
       <button mat-button (click)="pay()">
         <mat-icon>attach_money</mat-icon>
