--- a/src/app/customer/components/customer-search/customer-search.component.html
+++ b/src/app/customer/components/customer-search/customer-search.component.html
@@ -27,6 +27,12 @@
       <input matInput [(ngModel)]="model.address" placeholder="Địa chỉ" />
     </mat-form-field>
   </div>
+  <div class="sixteen wide column">
+    <dropdown [options]="[{value: 1, text: 'Hoạt động'},{value: 0, text: 'Không hoạt động'}]"
+              [label]="'Tình trạng'"
+              [(model)]="model.isActive">
+    </dropdown>
+  </div>
   <div class="actions">
     <button mat-flat-button (click)="doCancel()">Hủy (Esc)</button>
     <button mat-flat-button (click)="doSearch()" color="primary">Tìm (F4)</button>
