--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="ui container fluid" id="app">
   <div class="ui vertical left very thin sidebar menu visible">
-    <a routerLink="/retail" routerLinkActive="active" class="item"><img src="../assets/shopping-cart.svg" /></a>
-    <a routerLink="/product" routerLinkActive="active" class="item"><img src="../assets/product.svg" /></a>
-    <a routerLink="/customer" routerLinkActive="active" class="item"><img src="../assets/customer.svg" /></a>
-    <a routerLink="/report" routerLinkActive="active" class="item"><img src="../assets/report.svg" /></a>
+    <a routerLink="/retail" routerLinkActive="active" class="item"><img src="assets/shopping-cart.svg" /></a>
+    <a routerLink="/product" routerLinkActive="active" class="item"><img src="assets/product.svg" /></a>
+    <a routerLink="/customer" routerLinkActive="active" class="item"><img src="assets/customer.svg" /></a>
+    <a routerLink="/report" routerLinkActive="active" class="item"><img src="assets/report.svg" /></a>
   </div>
   <div class="pusher content">
     <router-outlet></router-outlet>
