--- a/src/app/widgets/grid/grid.component.html
+++ b/src/app/widgets/grid/grid.component.html
@@ -1,9 +1,9 @@
 <div>
-  <table mat-table [dataSource]="bindingDataSource" class="mat-elevation-z1">
+  <table mat-table [dataSource]="bindingDataSource" matSort [matSortDisableClear]="true" (matSortChange)="onSortChange($event)" class="mat-elevation-z1">
     <ng-container *ngFor="let column of columns; let i = index" [matColumnDef]="column.field">
-      <th mat-header-cell *matHeaderCellDef [style.width]="column.width || 'auto'"> {{column.caption}} </th>
+      <th mat-header-cell *matHeaderCellDef  mat-sort-header [disable]="!column.sortable" [style.width]="column.width || 'auto'">{{column.caption}}</th>
       <td mat-cell *matCellDef="let row">
-        <ng-template [ngIf]="isNumber(row, column)" [ngIfElse]="elseBlock">
+        <ng-template [ngIf]="!!column.isNumber" [ngIfElse]="elseBlock">
           {{column.format(getCellData(row, column)) | number}}
         </ng-template>
         <ng-template #elseBlock>
