--- a/src/app/widgets/dropdown/dropdown.component.scss
+++ b/src/app/widgets/dropdown/dropdown.component.scss
@@ -1,4 +1,4 @@
-.dropdown-container {  
+.dropdown-container {
   margin-top: -10px;
 
   .ui.dropdown {
@@ -38,7 +38,7 @@
     }
 
     .text {
-      top: 10px !important;      
+      top: 10px !important;
     }
   }
 
@@ -51,6 +51,6 @@
   }
 
   .mat-form-field-underline.highlight {
-    border-bottom: 1px solid #c69999;
+    border-bottom: 2px solid #3F51B5;
   }
 }
